# Lane-Optimize

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
Project-Documentation/: README.md  setup.md
Project-Documentation/concepts/: 01-sumo-traffic-model.md  02-reward-shaping.md
Project-Documentation/laneiq/: OVERVIEW.md
Project-Documentation/laneiq/agents/: OVERVIEW.md
Project-Documentation/laneiq/env/: OVERVIEW.md  actions.md  highway_env.md  observations.md  (+2 more)
Project-Documentation/sumo_scenarios/: OVERVIEW.md  config.md  network.md  routes.md  vtypes.md
backend/app/: main.py  schemas.py
backend/tests/: test_app.py
checkpoints/final/: dqn_v1_100k_smoke.pt  dqn_v2_100k_huber.pt  dqn_v3_mixed_200k.pt
laneiq/: __init__.py
laneiq/agents/: base.py  ppo_sb3.py
laneiq/env/: actions.py  highway_env.py  mixed_density_env.py  multi_agent_env.py  observations.py  rewards.py  sumo_runtime.py
laneiq/eval/: compare.py  metrics.py  runner.py
results/: baseline_smoke.csv  baseline_smoke_episodes.csv  week3_eval_episodes.csv  week3_eval_huber.csv  week3_eval_huber_episodes.csv  week3_eval_matrix.csv  week3_eval_mixed.csv  week3_eval_mixed_episodes.csv  week4_eval_episodes.csv  week4_eval_matrix.csv  week4_reward_sweep.csv  week4_reward_sweep_episodes.csv  week5_mappo_eval.csv
scripts/: eval_mappo.py  inspect_training_curves.py  plot_mappo_comparison.py  plot_pareto.py  profile_throughput.py  sweep_reward_ppo.py  train_dqn.py  train_mappo.py  train_ppo.py
sumo_scenarios/highway_3lane/: build.sh  highway.edg.xml  highway.net.xml  highway.nod.xml  highway.sumocfg  routes_high.rou.xml  routes_low.rou.xml  routes_medium.rou.xml  vtypes.add.xml
tests/: test_actions.py  test_baselines.py  test_dqn_agent.py  test_dqn_network.py  test_dqn_replay_buffer.py  test_dqn_smoke.py  test_eval_metrics.py  test_highway_env.py  test_mixed_density_env.py  test_multi_agent_env.py  test_observations.py  test_rewards.py  test_smoke.py  test_sumo_runtime.py
(+16 files in other folders)
