[project]
name = "laneiq"
version = "0.1.0"
description = "Reinforcement learning for real-time highway lane optimization in SUMO."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Rugved Zarkar" }]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
    "torch>=2.5",
    "tensorboard>=2.16",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "rich>=13.7",
]

[project.optional-dependencies]
sumo = [
    "eclipse-sumo>=1.20",
    "traci>=1.20",
    "sumolib>=1.20",
    # libsumo intentionally omitted: no macOS arm64 wheel as of 1.26.
    # We use TraCI everywhere; if Week 3 profiling shows env-step rate is the
    # training bottleneck, build libsumo from source and add the runtime toggle
    # back in `laneiq/env/sumo_runtime.py`.
]
rl = [
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
]
multiagent = [
    "pettingzoo>=1.24",
    "supersuit>=3.9",
]
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "websockets>=12.0",
    "httpx>=0.27",  # async test client for TestClient over async endpoints
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["laneiq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "sumo: marks tests that require SUMO installed",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
